welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:17: error: value % is not a member of java.awt.Color
   setCouleurBrosse(T(decalage)%H)
                               ^Array2:20: error: value % is not a member of java.awt.Color
    setCouleurBrosse(T(i+decalage)%H)
                                  ^Array2:23: error: value recule is not a member of Unit
possible cause: maybe a semicolon is missing before `value recule'?
  }recule(H-1)
   ^